# dlpctlF25

./: .gitignore  README.md  pyproject.toml
src/: Zeiglermethod_video_analysis.py  camera.py  camera_thread.py  creator_bitmask.py  dlp.py  dlp_thread.py  esp32.py  esp32_fgen.ino  exception.py  frame_analysis.py  function_generator.py  hough_params.py  image.py  image_seq.py  main.py  old_hough_circle.py  updated_frame_analysis  video_analysis.py  video_cv.py  video_read_thread.py  video_write_thread.py  widgets.py
src/ui/: dlpctl.ui  ui_dlpctl.py
static/: effective_parameters.txt
